@@ -26,6 +26,7 @@ Produced by Jim Shore and Levi Khatskevitch.
 * Fixed Enabled property in CheckboxTester for Framework 1.0.  Credit to Levi Khatskevitch.
 * Added support for Windows Integrated authentication (NTLM). Credit to Mark Smithson.
 * Added CurrentUrl property to Browser.  Credit to Jim Shore
+* Added Cookies property to Browser.  Credit to Levi Khatskevitch.
 
 (Note: Jim Shore was named Jim Little before the release of version 1.4.)
 
